<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/logo"
            android:layout_marginLeft="@dimen/normal_margin_value10"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="@dimen/large_big_margin_value"
            android:text="@string/enter_pw_title"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin_value"
        android:layout_marginRight="@dimen/medium_margin_value"
        android:layout_marginTop="@dimen/medium_margin_value"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rect_cir"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:padding="@dimen/big_normal_Padding_value">

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="left"
                android:hint="@string/e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/password_edit"
                android:selectAllOnFocus="true"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:textCursorDrawable="@color/blue"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />



        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin_value"
        android:layout_marginRight="@dimen/medium_margin_value"
        android:layout_marginTop="@dimen/medium_margin_value"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rect_cir"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:padding="@dimen/big_normal_Padding_value">

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="left"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/password_edit"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textCursorDrawable="@color/blue"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />



        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_pw_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin_value"
        android:layout_marginRight="@dimen/medium_margin_value"
        android:layout_marginTop="@dimen/medium_margin_value"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rect_cir"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left"
            android:padding="@dimen/big_normal_Padding_value">

            <EditText
                android:id="@+id/confirm_pw_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="left"
                android:hint="@string/fb_confirm_pw"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/password_edit"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textCursorDrawable="@color/blue"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />



        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/login_btn"
        android:background="@drawable/rounded_shape"
        android:text="@string/submit"
        android:textStyle="bold"
        android:layout_margin="@dimen/mbig_margin_value"
        android:layout_gravity="center"
        android:textSize="@dimen/small_text_size_for_header"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_height="40dp"
        android:layout_width="wrap_content" />

</LinearLayout>
