<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo"
            android:layout_marginLeft="@dimen/normal_margin_value10"
            android:layout_marginTop="@dimen/normal_margin_value10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <!--<ScrollView
        android:id="@+id/scrollablContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerView"
        android:layout_below="@+id/headerView" >-->

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/footerView"
            android:layout_below="@+id/headerView">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/normal_margin_value10"
            android:paddingRight="@dimen/normal_margin_value10"
            android:paddingBottom="@dimen/normal_margin_value10"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/user_name_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/normal_margin_value10"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--android:focusableInTouchMode="true">-->

            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@drawable/rect_cir"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--android:focusableInTouchMode="true"-->
            <!--android:gravity="left"-->
            <!--android:padding="@dimen/big_normal_Padding_value">-->

            <EditText
                android:id="@+id/user_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rect_cir"
                android:padding="@dimen/big_normal_Padding_value"
                android:layout_margin="@dimen/normal_margin_value10"
                android:gravity="left"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/password_edit"
                android:textColor="@color/black"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <!--</RelativeLayout>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_gray"
                android:layout_margin="@dimen/normal_margin_value10"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/dark_gray"
                >

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_cir"
                    android:hint="@string/password"
                    android:textColorHint="@color/dark_gray"
                    android:inputType="textPassword"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="bold"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_lt"
                android:layout_marginLeft="@dimen/medium_margin_value1"
                android:layout_marginTop="@dimen/very_small_margin_value"
                android:layout_marginBottom="@dimen/very_small_margin_value"
                android:gravity="top|center">

                <TextView
                    android:id="@+id/forgot_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:text="@string/forgot"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/small_text_size_for_header"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:background="@drawable/rounded_shape"
                android:text="@string/login_btn"
                android:textStyle="bold"
                android:textSize="@dimen/small_text_size_for_header"
                android:drawableRight="@drawable/right_arrow"
                android:paddingLeft="120dp"
                android:paddingRight="120dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_margin="@dimen/medium_margin_value"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facing issues with Login?"
                    android:layout_alignParentRight="true"
                    android:textSize="13dp"
                    android:textColor="@color/red"/>
            </RelativeLayout></LinearLayout>
        </LinearLayout>
   <!-- </ScrollView>-->

    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:id="@+id/createLt"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/header_height"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_acc"
                android:textColor="@color/blue"
                android:textSize="@dimen/small_text_size_for_header" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:background="@drawable/dotted"
                android:layerType="software" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="or"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size16"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:background="@drawable/dotted"
                android:layerType="software" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_social"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text_size_for_header" />

        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/normal_margin_value10"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/facebook_img"
                android:layout_margin="10dp"
                android:background="@drawable/facebook"
                />

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/google_search"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>